Fixed padding issue with bottom alignment

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -375,7 +375,6 @@
     padding: $gutter;
 
     @include breakpoint(sm) {
-      bottom: $desktop-width-gutter;
       background: transparent;
       padding: $gutter $gutter 0 $gutter;
       max-width: $container-width;
